[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/piano minigame/note.png" type="Texture" id=1]
[ext_resource path="res://scenes/2d/minigame/piano/note.gd" type="Script" id=2]
[ext_resource path="res://scenes/2d/minigame/piano/glow_shader_animation_player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/2d/minigame/piano/GlowShaderMaterial.tres" type="Material" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 12 )

[node name="note" type="Area2D" groups=["notes"]]
collision_layer = 512
collision_mask = 512
script = ExtResource( 2 )

[node name="hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="note" type="Sprite" parent="."]
material = ExtResource( 4 )
texture = ExtResource( 1 )

[node name="glow" parent="note" groups=["note_glow_animation_players"] instance=ExtResource( 3 )]

[node name="fade_tween" type="Tween" parent="."]

[connection signal="area_exited" from="." to="." method="_on_note_area_exited"]
[connection signal="tween_all_completed" from="fade_tween" to="." method="_on_fade_tween_tween_all_completed"]
